--- a/src/app/post-login/components/financial-data/financial-data.component.html
+++ b/src/app/post-login/components/financial-data/financial-data.component.html
@@ -14,8 +14,8 @@
                 >
                 <img src="assets/images/search-icon.png" alt="Search icon">
             </div>
-            <button class="btn btn-export" (click)="onAddNewRow()">ADD ROW</button>
-            <button class="btn btn-create-new" >SAVE</button>
+            <button class="btn btn-export">Export</button>
+            <button class="btn btn-create-new" >CREATE NEW</button>
         </div>
     </div>
 
