--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
@@ -26,19 +26,26 @@
             [rowHeight]="36"
             [columnDefs]="columnDef"
             [rowData]="rowData"
+            [defaultColDef]="defaultColDef"
+            [gridOptions]="gridOptions"
+            [sideBar]="sideBar"
+            [rowSelection]="rowSelection"
+            [autoGroupColumnDef]="autoGroupColumnDef"
+            [treeData]="true"
+            [groupSelectsChildren]="true"
+            [getDataPath]="getDataPath"
             [enableRangeSelection]="true"
             [enableFillHandle]="true"
             [undoRedoCellEditing]="true"
             [undoRedoCellEditingLimit]="undoRedoCellEditingLimit"
             [enableCellChangeFlash]="true"
-            [defaultColDef]="defaultColDef"
-            [gridOptions]="gridOptions"
-            [sideBar]="sideBar"
-            [rowSelection]="rowSelection"
+            (cellValueChanged)="onCellValueChanged($event)"
             (selectionChanged)="onSelectionChanged($event)"
             (toolPanelVisibleChanged)="onToolPanelVisibleChanged($event)"
             [pagination]="true"
             (cellValueChanged)="onCellValueChanged($event)"
+            [groupDefaultExpanded]="groupDefaultExpanded"
+            (filterChanged)="onFilterChanged($event)"
             (gridReady)="onGridReady($event)"
             >
         </ag-grid-angular>
