--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
@@ -109,6 +109,16 @@ button:focus {
             font-weight: 600;
             line-height: 16px; 
         }
+
+        .btn-undo-redo {
+            background-color: #f5f7f7;
+            font-size: 12px;
+            color: #2F2F2F;
+        }
+
+        .undo-redo-icon {
+            width: 20px;
+        }
     }
 }
 
