--- a/src/app/post-login/components/financial-data/financial-data.component.html
+++ b/src/app/post-login/components/financial-data/financial-data.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container saas-revenue-table">
     <div class="section-header">
         <div class="heading-text d-flex">
             <img src="assets/images/bar-chart-icon.png" alt="Bar-chart icon">
@@ -15,11 +15,11 @@
                 <img src="assets/images/search-icon.png" alt="Search icon">
             </div>
             <button class="btn btn-export">Export</button>
-            <button class="btn btn-create-new" >CREATE NEW</button>
+            <button class="btn btn-create-new" (click)="onCreateNew()">CREATE NEW</button>
         </div>
     </div>
 
-    <div class="table-section">
+    <div class="table-section d-flex gap-4">
         <ag-grid-angular
             style="flex-grow: 1; height: 655px"
             class="ag-theme-balham ag-grid"
@@ -40,9 +40,75 @@
             [cacheBlockSize]="cacheBlockSize"
             [paginationPageSize]="100"
             [paginateChildRows]="true"
-                        (gridReady)="onGridReady($event)"
+            (gridReady)="onGridReady($event)"
             >
         </ag-grid-angular>
+
+        <div class="add-new-section" *ngIf="isAddFlyOutOpen">
+            <img src="assets/images/close-icon-black.svg" alt="Close Icon" class="close-icon" (click)="onAddFlyOutClose()">
+            <h1 class="add-new-section-header" (click)="onCreateNew()">Create New Client</h1>
+
+            <form class="k-form k-form-md" [formGroup]="form" (ngSubmit)="onSaveChanges(form)">
+                <div class="formSection d-flex flex-column custom-gap-5">
+                    <kendo-formfield>
+                       <kendo-dropdownlist
+                        formControlName="clientName"
+                        [data]="clientNameList"
+                        class="dropdown"
+                        (open)="formDropDownOpen('clientname')"
+                        (close)="formDropDownClose()"
+                        (valueChange)="onClientDropDownValueChange($event)"
+                        [class.dropdown-open]="isClientDropDownOpen"
+                        >
+                       </kendo-dropdownlist>
+                    </kendo-formfield>  
+
+                    <kendo-formfield>
+                        <kendo-dropdownlist
+                         formControlName="invoicingEntity"
+                         [data]="invoicingEntityList"
+                         class="dropdown"
+                         (open)="formDropDownOpen('invoicingEntity')"
+                         (close)="formDropDownClose()"
+                         [class.dropdown-open]="isInvoicingDropDownOpen"
+                         >
+                        </kendo-dropdownlist>
+                     </kendo-formfield>  
+
+                     <kendo-formfield>
+                        <kendo-dropdownlist
+                         formControlName="legalEntity"
+                         [data]="legalEntityList"
+                         class="dropdown"
+                         (open)="formDropDownOpen('legalEntity')"
+                         (close)="formDropDownClose()"
+                         [class.dropdown-open]="isLegalDropDownOpen"
+                         >
+                        </kendo-dropdownlist>
+                     </kendo-formfield>  
+
+                     <kendo-formfield>
+                        <div class="d-flex gap-2 align-items-center margin-bottom-8">
+                            <kendo-label class="label-text">Starting Franchise Count</kendo-label>
+                            <div kendoTooltip filter="strong" class="custom-margin-top-2">
+                                <strong title="Do not include the default/corporate site in this count">
+                                    <img src="assets/images/information-circle-icon.png" alt="Info Icon" class="info-icon">
+                                </strong>                        
+                            </div>
+                        </div>
+                        <input
+                            formControlName="franchiseCount"
+                            kendoTextBox
+                        />
+                     </kendo-formfield>
+
+                     <div class="buttons-container d-flex gap-2">
+                        <button class="btn btn-create-new" type="submit" [disabled]="!form.valid">Save Changes</button>
+                        <button class="btn btn-export" (click)="onAddFlyOutClose()">Cancel</button>
+                    </div>
+                </div>
+            </form>
+        </div>
 
         <div class="status-bar-text" *ngIf="selectedNodes.length > 0 && rowIndex !=null">
             <p>Rows: <span>{{rowIndex+1}} of {{totalRows}}</span></p>
