--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -18,6 +18,38 @@ button:focus {
     }
 }
 
+.saas-revenue-table .btn-create-new{
+    display: flex;
+    height: 32px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: #296689;
+    padding: 8px 14px 8px 15px;
+    text-transform: uppercase;
+    font-family: 'Proxima Nova';
+    color: #FFF;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+.saas-revenue-table .btn-export{
+    display: flex;
+    width: 92px;
+    height: 32px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: #e4eff3;
+    padding: 8px 14px 8px 15px;
+    text-transform: uppercase;
+    font-family: 'Proxima Nova';
+    color: #296689;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 16px; 
+}
+
 .section-navbar{
     padding: 15px 29px;
     border: 1px solid #BBB;
@@ -81,38 +113,6 @@ button:focus {
                 border: 1px solid #DFDFDF;
                 background:  #FFF;
             }
-        }
-
-        .btn-create-new{
-            display: flex;
-            height: 32px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 4px;
-            background: #296689;
-            padding: 8px 14px 8px 15px;
-            text-transform: uppercase;
-            font-family: 'Proxima Nova';
-            color: #FFF;
-            font-size: 12px;
-            line-height: 16px;
-        }
-
-        .btn-export{
-            display: flex;
-            width: 92px;
-            height: 32px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 4px;
-            background: #e4eff3;
-            padding: 8px 14px 8px 15px;
-            text-transform: uppercase;
-            font-family: 'Proxima Nova';
-            color: #296689;
-            font-size: 12px;
-            font-weight: 600;
-            line-height: 16px; 
         }
     }
 }
@@ -485,3 +485,95 @@ button:focus {
 ::ng-deep .hide-header-name .ag-header-cell-comp-wrapper .ag-cell-label-container .ag-header-cell-label .ag-header-cell-text{
     display: none;
 }
+
+// CREATE NEW CLIENT FLYOUT PANEL //
+.add-new-section{
+    width: 331px;
+    padding: 25px 20px;
+    box-shadow: 0px 4px 10px rgba(#000, 0.4);
+    position: relative;
+
+    &-header{
+        font-size: 16px;
+        color: #2A2A2A;
+        font-weight: 700;
+        font-family:  'Proxima Nova';
+        line-height: 24px;
+        margin-bottom: 10px;
+    }
+}
+
+.add-new-section .close-icon{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    height: 25px;
+    cursor: pointer;
+}
+
+.dropdown {
+    border: 1px solid #dfdfdf;
+    height: 30px;
+    background-color: #FFF;
+    font-family: 'Proxima Nova';
+    font-size: 12px;
+}
+
+:host ::ng-deep .dropdown .k-input-value-text {
+    font-family: 'Proxima Nova';
+    font-size: 12px;
+    font-weight: 600;
+}
+
+:host ::ng-deep .dropdown{
+    .k-input-button{
+        display: none;
+    }
+
+    .k-input-inner::after{
+        content: url('../../../../assets/images/chevron-down-icon.svg');
+        margin-top: 4px;
+    }
+
+    &-open{
+        .k-input-inner::after{
+            content: url("../../../../assets/images/up-arrow.svg");
+        }  
+    }
+}
+
+::ng-deep.k-list-content .k-list-item.k-selected{
+    background: #296689;
+}
+
+.add-new-section .label-text{
+    font-family: 'Proxima Nova';
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+}
+
+.buttons-container{
+    border-top: 1px solid #DFDFDF;
+    padding-top: 20px;
+    margin-top: 20px;
+}
+
+.custom-gap-5{
+    gap:5px;
+}
+
+.info-icon{
+    height: 10px;
+    width: 10px;
+    cursor: pointer;
+}
+
+.margin-bottom-8{
+    margin-bottom: 8px;
+}
+
+.custom-margin-top-2{
+    margin-top: -2px;
+}
+
